V1.1: Remove unstable flags, add newer flag, rewrite README.md
Screw it, I'm bringing this repository back from the dead, as I'm working on a new project which might benefit from this.

Remove unstable flags: I do not want to be responsible for performance loss or potential instability, so anything considered experimental or otherwise was removed. Those flags could've given a slight performance lift? But it's marginal, and some have been advised against using.

add newer flag: `-XX:+UseCompactObjectHeaders`, this requires JDK 25+, but from what I'm reading, reduces memory usage by a substantial portion. 

rewrite README.md: It is still not in a good state, I don't like how a lot of things were worded. But I also don't feel like rewriting everything when I can go work on other things, so I've only changed the most egregious parts.